Add Jeanre budget asset files and data management improvements
- Created jeanre-accounts.json with 43 accounts (9 income, 33 expense, 1 asset)
- Created jeanre-transactions.json with 429 transactions from May 2024 to Dec 2025
- Added JEANRE_DATA_README.md documenting the asset files and structure
- Created data-manager.js module for centralized data operations
- Added forecast-setup-grid.json schema for forecast transaction definitions
- Added forecast-template-grid.json schema for forecast version management
- Created forecast-template.html and forecast-template.js for standalone template management
- Updated forecast.js with 3-section layout (version, setup, results)
- Updated TECHNICAL_DOCUMENTATION.md with forecast page architecture details
- Updated REQUIREMENTS.md with reorganized and detailed alpha requirements
- Updated app-data.json with new account entries

Data extracted from Manual tracking/budget_jeanre.xlsx
Total income: R688,375.35
Total expenses: R679,353.00
Net balance: R9,022.35

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -90,6 +90,28 @@
       "current_balance": 0,
       "interest": null,
       "openDate": "2025-10-13"
+    },
+    {
+      "id": 6,
+      "name": "new acc",
+      "type": {
+        "id": null,
+        "name": {
+          "id": 1,
+          "name": "Asset"
+        }
+      },
+      "currency": {
+        "id": null,
+        "name": {
+          "id": 1,
+          "name": "ZAR"
+        }
+      },
+      "balance": 0,
+      "current_balance": 0,
+      "interest": null,
+      "openDate": ""
     }
   ],
   "transactions": [
@@ -100,11 +122,11 @@
         "name": "salary2"
       },
       "credit_account": {
-        "id": 1,
-        "name": "Jeanre Credit Card"
+        "id": 3,
+        "name": "have to pay"
       },
-      "amount": 24600,
-      "isRecurring": true,
+      "amount": 488,
+      "isRecurring": false,
       "recurrence": [],
       "amountChange": [],
       "tags": []
@@ -112,15 +134,15 @@
     {
       "id": 6,
       "debit_account": {
-        "id": 1,
-        "name": "Jeanre Credit Card"
+        "id": 6,
+        "name": "new acc"
       },
       "credit_account": {
         "id": 3,
         "name": "expenses"
       },
       "amount": 5000,
-      "isRecurring": true,
+      "isRecurring": false,
       "recurrence": [],
       "amountChange": [],
       "tags": []
@@ -135,7 +157,7 @@
         "id": 4,
         "name": "salary2"
       },
-      "amount": 0,
+      "amount": 1,
       "isRecurring": false,
       "recurrence": [],
       "amountChange": [],
@@ -174,8 +196,8 @@
       },
       "periodCount": 24,
       "accounts": {
-        "id": 2,
-        "name": "tr"
+        "id": null,
+        "name": "12"
       },
       "notes": "Test budget version for demo.",
       "tags": [
