UX: Independent accordions per section

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -77,7 +77,7 @@
         },
         {
           "id": 5,
-          "name": "other stuff",
+          "name": "My Stuff",
           "type": {
             "id": 3,
             "name": "Equity"
@@ -121,8 +121,742 @@
           }
         }
       ],
-      "actualTransactions": [],
-      "projections": []
+      "actualTransactions": [
+        {
+          "date": "2026-01-06",
+          "amount": 0,
+          "description": null,
+          "status": "Completed",
+          "tags": [],
+          "fromAccount": {
+            "id": 1,
+            "name": "Jeanre Credit Card"
+          },
+          "toAccount": null
+        }
+      ],
+      "projections": [
+        {
+          "id": 1,
+          "scenarioId": 1,
+          "accountId": 1,
+          "account": "Jeanre Credit Card",
+          "date": "2026-02-01",
+          "balance": 10000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 1
+        },
+        {
+          "id": 2,
+          "scenarioId": 1,
+          "accountId": 1,
+          "account": "Jeanre Credit Card",
+          "date": "2026-03-02",
+          "balance": 10000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 2
+        },
+        {
+          "id": 3,
+          "scenarioId": 1,
+          "accountId": 1,
+          "account": "Jeanre Credit Card",
+          "date": "2026-04-03",
+          "balance": 10000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 3
+        },
+        {
+          "id": 4,
+          "scenarioId": 1,
+          "accountId": 1,
+          "account": "Jeanre Credit Card",
+          "date": "2026-05-04",
+          "balance": 10000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 4
+        },
+        {
+          "id": 5,
+          "scenarioId": 1,
+          "accountId": 1,
+          "account": "Jeanre Credit Card",
+          "date": "2026-06-05",
+          "balance": 10000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 5
+        },
+        {
+          "id": 6,
+          "scenarioId": 1,
+          "accountId": 1,
+          "account": "Jeanre Credit Card",
+          "date": "2026-07-06",
+          "balance": 10000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 6
+        },
+        {
+          "id": 7,
+          "scenarioId": 1,
+          "accountId": 1,
+          "account": "Jeanre Credit Card",
+          "date": "2026-08-07",
+          "balance": 10000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 7
+        },
+        {
+          "id": 8,
+          "scenarioId": 1,
+          "accountId": 1,
+          "account": "Jeanre Credit Card",
+          "date": "2026-09-08",
+          "balance": 10000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 8
+        },
+        {
+          "id": 9,
+          "scenarioId": 1,
+          "accountId": 1,
+          "account": "Jeanre Credit Card",
+          "date": "2026-10-09",
+          "balance": 10000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 9
+        },
+        {
+          "id": 10,
+          "scenarioId": 1,
+          "accountId": 1,
+          "account": "Jeanre Credit Card",
+          "date": "2026-11-10",
+          "balance": 10000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 10
+        },
+        {
+          "id": 11,
+          "scenarioId": 1,
+          "accountId": 1,
+          "account": "Jeanre Credit Card",
+          "date": "2026-12-11",
+          "balance": 10000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 11
+        },
+        {
+          "id": 12,
+          "scenarioId": 1,
+          "accountId": 1,
+          "account": "Jeanre Credit Card",
+          "date": "2026-12-31",
+          "balance": 10000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 12
+        },
+        {
+          "id": 13,
+          "scenarioId": 1,
+          "accountId": 2,
+          "account": "salary",
+          "date": "2026-02-01",
+          "balance": 24600,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 1
+        },
+        {
+          "id": 14,
+          "scenarioId": 1,
+          "accountId": 2,
+          "account": "salary",
+          "date": "2026-03-02",
+          "balance": 24600,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 2
+        },
+        {
+          "id": 15,
+          "scenarioId": 1,
+          "accountId": 2,
+          "account": "salary",
+          "date": "2026-04-03",
+          "balance": 24600,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 3
+        },
+        {
+          "id": 16,
+          "scenarioId": 1,
+          "accountId": 2,
+          "account": "salary",
+          "date": "2026-05-04",
+          "balance": 24600,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 4
+        },
+        {
+          "id": 17,
+          "scenarioId": 1,
+          "accountId": 2,
+          "account": "salary",
+          "date": "2026-06-05",
+          "balance": 24600,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 5
+        },
+        {
+          "id": 18,
+          "scenarioId": 1,
+          "accountId": 2,
+          "account": "salary",
+          "date": "2026-07-06",
+          "balance": 24600,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 6
+        },
+        {
+          "id": 19,
+          "scenarioId": 1,
+          "accountId": 2,
+          "account": "salary",
+          "date": "2026-08-07",
+          "balance": 24600,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 7
+        },
+        {
+          "id": 20,
+          "scenarioId": 1,
+          "accountId": 2,
+          "account": "salary",
+          "date": "2026-09-08",
+          "balance": 24600,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 8
+        },
+        {
+          "id": 21,
+          "scenarioId": 1,
+          "accountId": 2,
+          "account": "salary",
+          "date": "2026-10-09",
+          "balance": 24600,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 9
+        },
+        {
+          "id": 22,
+          "scenarioId": 1,
+          "accountId": 2,
+          "account": "salary",
+          "date": "2026-11-10",
+          "balance": 24600,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 10
+        },
+        {
+          "id": 23,
+          "scenarioId": 1,
+          "accountId": 2,
+          "account": "salary",
+          "date": "2026-12-11",
+          "balance": 24600,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 11
+        },
+        {
+          "id": 24,
+          "scenarioId": 1,
+          "accountId": 2,
+          "account": "salary",
+          "date": "2026-12-31",
+          "balance": 24600,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 12
+        },
+        {
+          "id": 25,
+          "scenarioId": 1,
+          "accountId": 3,
+          "account": "expenses",
+          "date": "2026-02-01",
+          "balance": 5000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 1
+        },
+        {
+          "id": 26,
+          "scenarioId": 1,
+          "accountId": 3,
+          "account": "expenses",
+          "date": "2026-03-02",
+          "balance": 5000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 2
+        },
+        {
+          "id": 27,
+          "scenarioId": 1,
+          "accountId": 3,
+          "account": "expenses",
+          "date": "2026-04-03",
+          "balance": 5000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 3
+        },
+        {
+          "id": 28,
+          "scenarioId": 1,
+          "accountId": 3,
+          "account": "expenses",
+          "date": "2026-05-04",
+          "balance": 5000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 4
+        },
+        {
+          "id": 29,
+          "scenarioId": 1,
+          "accountId": 3,
+          "account": "expenses",
+          "date": "2026-06-05",
+          "balance": 5000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 5
+        },
+        {
+          "id": 30,
+          "scenarioId": 1,
+          "accountId": 3,
+          "account": "expenses",
+          "date": "2026-07-06",
+          "balance": 5000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 6
+        },
+        {
+          "id": 31,
+          "scenarioId": 1,
+          "accountId": 3,
+          "account": "expenses",
+          "date": "2026-08-07",
+          "balance": 5000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 7
+        },
+        {
+          "id": 32,
+          "scenarioId": 1,
+          "accountId": 3,
+          "account": "expenses",
+          "date": "2026-09-08",
+          "balance": 5000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 8
+        },
+        {
+          "id": 33,
+          "scenarioId": 1,
+          "accountId": 3,
+          "account": "expenses",
+          "date": "2026-10-09",
+          "balance": 5000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 9
+        },
+        {
+          "id": 34,
+          "scenarioId": 1,
+          "accountId": 3,
+          "account": "expenses",
+          "date": "2026-11-10",
+          "balance": 5000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 10
+        },
+        {
+          "id": 35,
+          "scenarioId": 1,
+          "accountId": 3,
+          "account": "expenses",
+          "date": "2026-12-11",
+          "balance": 5000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 11
+        },
+        {
+          "id": 36,
+          "scenarioId": 1,
+          "accountId": 3,
+          "account": "expenses",
+          "date": "2026-12-31",
+          "balance": 5000,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 12
+        },
+        {
+          "id": 37,
+          "scenarioId": 1,
+          "accountId": 4,
+          "account": "salary2",
+          "date": "2026-02-01",
+          "balance": 0,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 1
+        },
+        {
+          "id": 38,
+          "scenarioId": 1,
+          "accountId": 4,
+          "account": "salary2",
+          "date": "2026-03-02",
+          "balance": 0,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 2
+        },
+        {
+          "id": 39,
+          "scenarioId": 1,
+          "accountId": 4,
+          "account": "salary2",
+          "date": "2026-04-03",
+          "balance": 0,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 3
+        },
+        {
+          "id": 40,
+          "scenarioId": 1,
+          "accountId": 4,
+          "account": "salary2",
+          "date": "2026-05-04",
+          "balance": 0,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 4
+        },
+        {
+          "id": 41,
+          "scenarioId": 1,
+          "accountId": 4,
+          "account": "salary2",
+          "date": "2026-06-05",
+          "balance": 0,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 5
+        },
+        {
+          "id": 42,
+          "scenarioId": 1,
+          "accountId": 4,
+          "account": "salary2",
+          "date": "2026-07-06",
+          "balance": 0,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 6
+        },
+        {
+          "id": 43,
+          "scenarioId": 1,
+          "accountId": 4,
+          "account": "salary2",
+          "date": "2026-08-07",
+          "balance": 0,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 7
+        },
+        {
+          "id": 44,
+          "scenarioId": 1,
+          "accountId": 4,
+          "account": "salary2",
+          "date": "2026-09-08",
+          "balance": 0,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 8
+        },
+        {
+          "id": 45,
+          "scenarioId": 1,
+          "accountId": 4,
+          "account": "salary2",
+          "date": "2026-10-09",
+          "balance": 0,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 9
+        },
+        {
+          "id": 46,
+          "scenarioId": 1,
+          "accountId": 4,
+          "account": "salary2",
+          "date": "2026-11-10",
+          "balance": 0,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 10
+        },
+        {
+          "id": 47,
+          "scenarioId": 1,
+          "accountId": 4,
+          "account": "salary2",
+          "date": "2026-12-11",
+          "balance": 0,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 11
+        },
+        {
+          "id": 48,
+          "scenarioId": 1,
+          "accountId": 4,
+          "account": "salary2",
+          "date": "2026-12-31",
+          "balance": 0,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 12
+        },
+        {
+          "id": 49,
+          "scenarioId": 1,
+          "accountId": 5,
+          "account": "other stuff",
+          "date": "2026-02-01",
+          "balance": 20,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 1
+        },
+        {
+          "id": 50,
+          "scenarioId": 1,
+          "accountId": 5,
+          "account": "other stuff",
+          "date": "2026-03-02",
+          "balance": 20,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 2
+        },
+        {
+          "id": 51,
+          "scenarioId": 1,
+          "accountId": 5,
+          "account": "other stuff",
+          "date": "2026-04-03",
+          "balance": 20,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 3
+        },
+        {
+          "id": 52,
+          "scenarioId": 1,
+          "accountId": 5,
+          "account": "other stuff",
+          "date": "2026-05-04",
+          "balance": 20,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 4
+        },
+        {
+          "id": 53,
+          "scenarioId": 1,
+          "accountId": 5,
+          "account": "other stuff",
+          "date": "2026-06-05",
+          "balance": 20,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 5
+        },
+        {
+          "id": 54,
+          "scenarioId": 1,
+          "accountId": 5,
+          "account": "other stuff",
+          "date": "2026-07-06",
+          "balance": 20,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 6
+        },
+        {
+          "id": 55,
+          "scenarioId": 1,
+          "accountId": 5,
+          "account": "other stuff",
+          "date": "2026-08-07",
+          "balance": 20,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 7
+        },
+        {
+          "id": 56,
+          "scenarioId": 1,
+          "accountId": 5,
+          "account": "other stuff",
+          "date": "2026-09-08",
+          "balance": 20,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 8
+        },
+        {
+          "id": 57,
+          "scenarioId": 1,
+          "accountId": 5,
+          "account": "other stuff",
+          "date": "2026-10-09",
+          "balance": 20,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 9
+        },
+        {
+          "id": 58,
+          "scenarioId": 1,
+          "accountId": 5,
+          "account": "other stuff",
+          "date": "2026-11-10",
+          "balance": 20,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 10
+        },
+        {
+          "id": 59,
+          "scenarioId": 1,
+          "accountId": 5,
+          "account": "other stuff",
+          "date": "2026-12-11",
+          "balance": 20,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 11
+        },
+        {
+          "id": 60,
+          "scenarioId": 1,
+          "accountId": 5,
+          "account": "other stuff",
+          "date": "2026-12-31",
+          "balance": 20,
+          "income": 0,
+          "expenses": 0,
+          "netChange": 0,
+          "period": 12
+        }
+      ]
     },
     {
       "id": 2,
