feat: Step 1 - Library integration and verification
- Install Tabulator.js for grid UI
- Install financejs (though native JS math is sufficient)
- Create library-test.js to verify Tabulator functionality
- Create library-test.html page for testing
- Verified Tabulator loads and creates instances
- Verified financial calculations work (FV, compound interest)
- All tests passing ✓

Phase 1, Step 1/3 complete

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "electron-builder": "^26.4.0"
   },
   "dependencies": {
+    "financejs": "^4.1.0",
     "tabulator-tables": "^6.3.1"
   }
 }
