--- a/userData/assets/app-data.json
+++ b/userData/assets/app-data.json
@@ -2816,7 +2816,8 @@
             "id": null
           },
           "periodicChange": "",
-          "tags": []
+          "tags": [],
+          "transactionType": ""
         },
         {
           "id": 3,
